--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "check": "npx npm-check-updates -u"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-pro": "^5.15.2",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "autoprefixer": "^9.8.5",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.0.0-beta2",
     "bulma": "^0.9.0",
