--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "html-webpack-plugin": "^4.3.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
+    "jquery": "^3.5.1",
     "lazysizes": "^5.2.2",
     "mini-css-extract-plugin": "^0.9.0",
     "offline-plugin": "^5.0.7",
+    "popper": "^0.1.0",
+    "popper.js": "^1.16.1",
     "postcss-loader": "^3.0.0",
     "preload-webpack-plugin": "^3.0.0-beta.4",
     "script-ext-html-webpack-plugin": "^2.1.4",
