--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^4.3.0",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
+    "imagesloaded": "^4.1.4",
     "jquery": "^3.5.1",
     "lazysizes": "^5.2.2",
     "mini-css-extract-plugin": "^0.9.0",
