--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "imagesloaded": "^4.1.4",
     "jquery": "^3.5.1",
+    "keydrown": "^1.2.8",
     "lazysizes": "^5.2.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
