--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-loader": "^3.0.0",
     "preload-webpack-plugin": "^3.0.0-beta.4",
     "script-ext-html-webpack-plugin": "^2.1.4",
+    "sharp": "^0.27.2",
     "terser-webpack-plugin": "^3.0.7",
     "webpack-merge": "^5.0.9",
     "write-file-webpack-plugin": "^4.5.1"
